# dromajo

./: .clang-format  .gitignore  .travis.yml  BRANCH_TRACE_FORMAT.md  CMakeLists.txt  Changelog  Makefile  Makefile.js  README.md  VERSION  aes.h  block_net.c  build_filelist.c  cutils.h  fs.c  fs.h  fs_disk.c  fs_net.c  fs_utils.c  fs_utils.h  fs_wget.c  fs_wget.h  iomem.c  iomem.h  jsemu.c  machine.c  machine.h  netinit.sh  pci.c  pci.h  ps2.c  readme.txt  riscv_cpu.c  riscv_cpu.h  riscv_cpu_fp_template.h  riscv_cpu_priv.h  riscv_cpu_template.h  riscv_machine.c  riscvemu.c  riscvemu_fp_template.h  (+14 more)
.github/workflows/: pull_request.yml
bootrom/: bootrom.S
cmake/: FindLibElf.cmake
doc/: GitHub-use.md  cosim.md  cva6-dromajo-integration.md  goldmem.md  setup.md  simpoint.md
gold/: Gold_core.cpp  Gold_core.hpp  Gold_data.cpp  Gold_data.hpp  Gold_mem.hpp  Gold_notify.cpp  Gold_notify.hpp  bridge_dromajo.cpp  bridge_inorder.cpp  core_test.cpp  data_test.cpp  explicit_type.hpp  lrand.cpp  lrand.hpp  robin_hood.hpp
include/: LiveCache.h  LiveCacheCore.h  config.h.in  cutils.h  dromajo.h  dromajo_cosim.h  dromajo_fp_template.h  dromajo_template.h  dw_apb_uart.h  elf64.h  fs.h  fs_utils.h  json.h  machine.h  riscv.h  riscv_cpu.h  riscv_machine.h  softfp_template_icvt.h  vector_template.h  virtio.h
js/: index.html  jslinux.js  lib.js  riscvemu.js  term.html  term.js
patches/: config_linux-4.6.2_x86  config_linux64  config_linux64-9p_root  config_linux_riscv32  config_linux_riscv64  readme.txt  riscv-linux.diff  riscv-pk.diff
riscv-simple-tests/: rv64ua-p-amoadd_d  rv64ua-p-amoadd_d.dump  rv64ua-p-amoadd_w  rv64ua-p-amoadd_w.dump  rv64ua-p-amoand_d  rv64ua-p-amoand_d.dump  rv64ua-p-amoand_w  rv64ua-p-amoand_w.dump  rv64ua-p-amomax_d  rv64ua-p-amomax_d.dump  rv64ua-p-amomax_w  rv64ua-p-amomax_w.dump  rv64ua-p-amomaxu_d  rv64ua-p-amomaxu_d.dump  rv64ua-p-amomaxu_w  rv64ua-p-amomaxu_w.dump  rv64ua-p-amomin_d  rv64ua-p-amomin_d.dump  rv64ua-p-amomin_w  rv64ua-p-amomin_w.dump  rv64ua-p-amominu_d  rv64ua-p-amominu_d.dump  rv64ua-p-amominu_w  rv64ua-p-amominu_w.dump  rv64ua-p-amoor_d  rv64ua-p-amoor_d.dump  rv64ua-p-amoor_w  rv64ua-p-amoor_w.dump  rv64ua-p-amoswap_d  rv64ua-p-amoswap_d.dump  rv64ua-p-amoswap_w  rv64ua-p-amoswap_w.dump  rv64ua-p-amoxor_d  rv64ua-p-amoxor_d.dump  rv64ua-p-amoxor_w  rv64ua-p-amoxor_w.dump  rv64ua-p-lrsc  rv64ua-p-lrsc.dump  rv64ua-v-amoadd_d  rv64ua-v-amoadd_d.dump  (+36 more)
run/: .gitignore  Makefile  S50bench  boot.cfg  config-buildroot-2020.05.1  config-linux-5.3  config-linux-5.5  crt.S  laur.S  regression.sh  roi.c  setup.md  uart_test.c
src/: .clang-format  LiveCache.cpp  Makefile  cutils.cpp  cutils.h  dromajo.c  dromajo.cpp  dromajo.h  dromajo_cosim.c  dromajo_cosim.cpp  dromajo_cosim.h  dromajo_cosim_test.cpp  dromajo_main.c  dromajo_main.cpp  dromajo_template.h  dw_apb_uart.cpp  elf64.cpp  elf64.h  fs.cpp  fs.h  fs_disk.cpp  iomem.cpp  iomem.h  json.cpp  json.h  list.h  machine.cpp  machine.h  pci.cpp  pci.h  riscv.h  riscv_cpu.c  riscv_cpu.cpp  riscv_cpu.h  riscv_machine.c  riscv_machine.cpp  riscv_machine.h  softfp.cpp  softfp.h  softfp_template.h  (+2 more)
tests/: commitlog-helper.py
tests/regress-compress/: Makefile  regress-compress.S
tests/regress-fcvt/: Makefile  regress-fcvt.S  regress-fcvt.spout
